Fix dark mode for asteria, elongo, fourtwenty, malabares, mapmasters, miams, tagteam + lobby

--- a/src/css/dark_theme/general.less
+++ b/src/css/dark_theme/general.less
@@ -237,6 +237,61 @@ select.colorselector {
   background: none !important;
 }
 
+.wannaplayauto_time {
+  color: var(--light-80);
+  text-shadow: 0 0 15px #000;
+}
+
+.wannaplayauto_loadingbartxt {
+  color: var(--light-80);
+  text-shadow: 1px 1px 5px #000;
+}
+
+.wannaplayauto_loading {
+  background-color: var(--dark-40);
+}
+
+.wannaplayauto_loadingbar_tp1 {
+  background-color: #285f21
+}
+
+.wannaplayauto_loadingbar_tp2 {
+  background-color: #47542c
+}
+
+.wannaplayauto_loadingbar_tp3 {
+  background-color: #564829
+}
+
+.mm_pref_color_priority_0,
+.dijitTooltipContainer>div>div.mm_pref_color_priority_0 {
+  background-color: #285f21 !important;
+}
+
+.mm_pref_color_priority_1,
+.dijitTooltipContainer>div>div.mm_pref_color_priority_1 {
+  background-color: #17750b !important;
+}
+
+.mm_pref_color_priority_2,
+.dijitTooltipContainer>div>div.mm_pref_color_priority_2 {
+  background-color: #47542c !important;
+}
+
+.mm_pref_color_priority_3,
+.dijitTooltipContainer>div>div.mm_pref_color_priority_3 {
+  background-color: #564829 !important;
+}
+
+.mm_pref_color_priority_9,
+.dijitTooltipContainer>div>div.mm_pref_color_priority_9 {
+  background-color: #6d1212 !important;
+}
+
+.game_box_image_wrap img {
+  filter: var(--ext-bright);
+}
+
 .lobby_invite_friend_remove {
   color: var(--light-80);
 }
